--- a/qanda/qanda_app/templates/qanda/category_list.html
+++ b/qanda/qanda_app/templates/qanda/category_list.html
@@ -1,65 +1,73 @@
 {% extends "qanda/qanda_base.html" %}
 {% load i18n %}
 
-{% block head %}
-	<title> {{ SITE_NAME }} - {% trans "Categories" %} </title>
+{% block title %}
+	{{ SITE_NAME }} - {% trans "Categories" %}
 {% endblock %}
 
 {% block body %}
 
-	{% block category_list %}
+	<div class="container">
 
-	{{ debug }}
-	<h3>
-		{% trans "Categories" %}
-	</h3>
-	<h5>
-		{% trans "in alphabetical order" %}
-	</h5>
-	<div class="row">
-		<div class="span10">
-			<div class="row">
-				<div class="span10">
-					{% for category in categories %}
-								<div class="span3">
-									<a class="tag-list-element" href="{% url categorized_question_list category=category question_id=0 %}">
-										"{{ category }}"
-									</a>
-									<span class="tag-list-used">
-									  - {% trans "has" %} {{ category.count }} {% blocktrans count counter=category.count %}question {% plural %} questions{% endblocktrans %}
-									</span>
-								</div>	
-					{% endfor %}
+	    {% include "qanda/navbar.html" %}
+
+		{% block category_list %}
+
+		{{ debug }}
+		<h3>
+			{% trans "Categories" %}
+		</h3>
+		<h5>
+			{% trans "in alphabetical order" %}
+		</h5>
+		<div class="row">
+			<div class="span10">
+				<div class="row">
+					<div class="span10">
+						{% for category in categories %}
+									<div class="span3">
+										<a class="tag-list-element" href="{% url categorized_question_list category=category question_id=0 %}">
+											"{{ category }}"
+										</a>
+										<span class="tag-list-used">
+										  - {% trans "has" %} {{ category.count }} {% blocktrans count counter=category.count %}question {% plural %} questions{% endblocktrans %}
+										</span>
+									</div>	
+						{% endfor %}
+					</div>
+				</div>
+
+				<div class="row">
+					<p></p>
+				</div>
+
+				<div class="pagination pagination-large text-center">
+				  <ul>
+					{% if prev or prev == 0 %}
+				    	<li class=""><a href="{% url qanda_app.views.category_list page=prev %}">{% trans "Prev" %}</a></li>
+			    	{% else %}
+				    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
+					{% endif %}
+						
+						<li class="disabled"><a href="#">_______________________</a></li>
+
+					{% if next %}
+				    	<li class=""><a href="{% url qanda_app.views.category_list page=next %}">{% trans "Next" %}</a></li>
+				    {% else %}
+				    	<li class="disabled"><a href="#">{% trans "Next" %}</a></li>
+					{% endif %}
+				  </ul>
 				</div>
 			</div>
 
-			<div class="row">
-				<p></p>
-			</div>
+			{% include "qanda/righthand_tags.html" %}
 
-			<div class="pagination pagination-large text-center">
-			  <ul>
-				{% if prev or prev == 0 %}
-			    	<li class=""><a href="{% url qanda_app.views.category_list page=prev %}">{% trans "Prev" %}</a></li>
-		    	{% else %}
-			    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
-				{% endif %}
-					
-					<li class="disabled"><a href="#">_______________________</a></li>
-
-				{% if next %}
-			    	<li class=""><a href="{% url qanda_app.views.category_list page=next %}">{% trans "Next" %}</a></li>
-			    {% else %}
-			    	<li class="disabled"><a href="#">{% trans "Next" %}</a></li>
-				{% endif %}
-			  </ul>
-			</div>
 		</div>
 
-		{% include "qanda/righthand_tags.html" %}
+		{% endblock %}
+
+		{% include "qanda/scripts.html" %}
 
 	</div>
-
-	{% endblock %}
 
 {% endblock %}
